# stereo_slam

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  mainpage.dox  manifest.xml  package.xml
cmake-modules/: FindG2O.cmake  FindSuiteSparse.cmake
etc/: pointcloud.yaml  reconstruction.yaml
include/: base.h  calibration.h  cluster.h  constants.h  frame.h  graph.h  hash.h  icp_refinement_base.h  ldb.h  loop_closing.h  pose.h  postgresql_interface.h  publisher.h  stereo_localization_base.h  stereo_slam_base.h  tools.h  tracking.h  utils.h
include/common/: graph.h  pose.h  tools.h  vertex.h
include/localization/: base.h  cluster.h  constants.h  frame.h  frame_publisher.h  graph.h  hash.h  ldb.h  loop_closing.h  map.h  pose.h  publisher.h  tools.h  tracking.h
include/reconstruction/: base.h  collector_base.h  registration_base.h  vrip.h
include/reconstruction/offline/: base.h
include/reconstruction/online/: base.h  receiver.h  requester.h  viewer.h
include/registration/: base.h
include/slam/: base.h  graph.h  pose.h  tools.h
include/tools/: console_color.h
launch/: demo.launch
msg/: CameraParams.msg  Correction.msg  GraphData.msg  GraphPoses.msg  Node.msg  SlamInfo.msg  SlamVertex.msg  SubTimeLoopClosing.msg  TimeGraph.msg  TimeLoopClosing.msg  TimeTracking.msg
polybool/: CMakeLists.txt  ObjHeap.h  Sort.h  pbarea.h  pbdefs.h  pbgeom.cpp  pbgeom.h  pbgeom.inl  pbimpl.h  pbio.cpp  pbio.h  pbpolys.cpp  pbsweep.cpp  pbtria.h  pbunit.cpp  pbunit.dsp  pbunit.dsw  polybool.cpp  polybool.h  readme.txt  triacons.cpp  triamono.cpp
scripts/: graph_viewer.py  plot_odom.py  slam_evaluation.py
sql/: create_graph_nodes_table.sql
src/: base.cpp  calibration.cpp  cluster.cpp  frame.cpp  graph.cpp  graph_constructor.cpp  graph_updater.cpp  hash.cpp  icp_refinement_base.cpp  icp_refinement_node.cpp  ldb.cpp  loop_closing.cpp  map_node.h  matching_process.cpp  node.cpp  odom_subscriber.cpp  pose.cpp  postgresql_interface.h  publisher.cpp  stereo_localization_base.cpp  stereo_localization_base.h  stereo_localization_node.cpp  stereo_slam_base.cpp  stereo_slam_node.cpp  test.cpp  tracking.cpp  utils.h  vertex_insertion.cpp
src/common/: graph.cpp  pose.cpp
src/localization/: base.cpp  cluster.cpp  frame.cpp  frame_publisher.cpp  graph.cpp  hash.cpp  ldb.cpp  loop_closing.cpp  map.cpp  node.cpp  pose.cpp  publisher.cpp  tracking.cpp
src/reconstruction/: base.cpp  collector_base.cpp  collector_node.cpp  icp.cpp  node.cpp  registration_base.cpp  registration_node.cpp  save_clouds.cpp  vrip.cpp
src/reconstruction/offline/: base.cpp  node.cpp
src/reconstruction/online/: base.cpp  inserter.cpp  node.cpp  receiver.cpp  registration.cpp  requester.cpp  viewer.cpp
src/registration/: base.cpp  node.cpp
src/slam/: base.cpp  graph.cpp  node.cpp  pose.cpp
srv/: GetGraph.srv  GetPointCloud.srv  SetGraph.srv  SetPointCloud.srv
