<package>
  <name>stereo_slam</name>
  <version>0.0.1</version>
  <description>Stereo Slam</description>
  <author email="pl.negre@uib.cat">Pep Lluis Negre</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/srv/stereo_slam</url>
  <url type="bugtracker">https://github.com/srv/stereo_slam/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>libhaloc</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>libhaloc</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf_conversions</run_depend>

</package>
